--- a/.github/workflows/pytest-workflow.yml
+++ b/.github/workflows/pytest-workflow.yml
@@ -29,7 +29,7 @@ env:
   NXF_SINGULARITY_LIBRARYDIR: ${{ github.workspace }}/.singularity
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   # renovate: datasource=github-releases depName=nextflow-io/nextflow versioning=semver
-  NXF_VERSION: "24.10.1"
+  NXF_VER: "24.10.1"
 
 jobs:
   pytest-changes:
@@ -266,7 +266,7 @@ jobs:
       - name: Setup Nextflow
         uses: nf-core/setup-nextflow@v2
         with:
-          version: ${{ env.NXF_VERSION }}
+          version: ${{ env.NXF_VER }}
 
       - name: Setup apptainer
         if: matrix.profile == 'singularity'
