build: Add nf-co2footprint to CI runs

--- a/tests/config/nf-test.config
+++ b/tests/config/nf-test.config
@@ -58,3 +58,7 @@ includeConfig 'test_data.config'
 manifest {
     nextflowVersion = '!>=24.10.1'
 }
+
+plugins {
+  id 'nf-co2footprint@1.0.0-beta'
+}
