build(#7016): Add required wave config

--- a/tests/config/nf-test.config
+++ b/tests/config/nf-test.config
@@ -15,6 +15,10 @@ profiles {
     singularity {
         singularity.enabled = true
         singularity.autoMounts = true
+        fusion.enabled = true
+        fusion.exportStorageCredentials = true
+        wave.enabled = true
+        // tower.accessToken =
     }
     conda {
         conda.enabled = true
@@ -36,6 +40,12 @@ profiles {
         docker.enabled = true
         docker.fixOwnership = true
         docker.runOptions = '--platform=linux/amd64'
+        fusion.enabled = true
+        fusion.exportStorageCredentials = true
+        wave.enabled = true
+        // Should be set by env variable?
+        // tower.accessToken =
+
     }
     gpu {
         docker.runOptions       = '-u $(id -u):$(id -g) --gpus all'
