test(#7016): Can you even do that?

--- a/nf-test.config
+++ b/nf-test.config
@@ -11,6 +11,8 @@ config {
     // run all test with the defined docker profile from the main nextflow.config
     profile ""
 
+    options "-work-dir s3://nf-core-test-datasets/scratch"
+
     // load the necessary plugins
     plugins {
         load "nft-bam@0.3.0"
