--- a/nf-test.config
+++ b/nf-test.config
@@ -3,15 +3,13 @@ config {
     testsDir "."
 
     // nf-test directory including temporary files for each test
-    workDir System.getenv("NFT_WORKDIR") ?: ".nf-test"
+    workDir System.getenv("NFT_WORKDIR") ?: "s3://nf-core-test-datasets/scratch"
 
     // location of an optional nextflow.config file specific for executing tests
     configFile "tests/config/nf-test.config"
 
     // run all test with the defined docker profile from the main nextflow.config
     profile ""
-
-    options "-work-dir s3://nf-core-test-datasets/scratch"
 
     // load the necessary plugins
     plugins {
