--- a/.github/actions/number-of-shards/action.yml
+++ b/.github/actions/number-of-shards/action.yml
@@ -23,7 +23,7 @@ runs:
       shell: bash
       run: |
         nftest_output=$(nf-test test --dry-run --changed-since HEAD^ --filter process --follow-dependencies)
-        if nftest_output | grep -q 'No tests found'; then
+        if $nftest_output | grep -q 'No tests found'; then
           shards = []
           total_shards=0
         fi
