change ext args to new convention

--- a/modules/nf-core/crabs/insilicopcr/tests/nextflow.config
+++ b/modules/nf-core/crabs/insilicopcr/tests/nextflow.config
@@ -1,7 +1,7 @@
 process {
 
     withName: CRABS_INSILICOPCR {
-        ext.args = '--forward "GTCGGTAAAACTCGTGCCAGC" --reverse "CATAGTGGGGTATCTAATCCCAGTTTG"'
+        ext.args = params.module_args
     }
 
 }
