update to seqera container + rm redundant test

--- a/modules/nf-core/bowtie2/align/tests/nextflow.config
+++ b/modules/nf-core/bowtie2/align/tests/nextflow.config
@@ -1,8 +1,8 @@
 process {
-    withName: BOWTIE2_BUILD_LARGE {
+    withName: 'BOWTIE2_BUILD_LARGE' {
         ext.args = '--large-index'
     }
-    withName: BOWTIE2_ALIGN {
+    withName: 'BOWTIE2_ALIGN' {
         ext.args  = params.bowtie2_args
         ext.args2 = params.bowtie2_args2
     }
