--- a/modules/nf-core/samtools/faidx/meta.yml
+++ b/modules/nf-core/samtools/faidx/meta.yml
@@ -1,9 +1,10 @@
 name: samtools_faidx
-description: Index FASTA file
+description: Index FASTA file, and optionally generate a file of chromosome sizes
 keywords:
   - index
   - fasta
   - faidx
+  - chromosome
 tools:
   - samtools:
       description: |
@@ -34,6 +35,11 @@ input:
         type: file
         description: FASTA index file
         pattern: "*.{fai}"
+  - - get_sizes:
+        type: boolean
+        description: use cut to get the sizes of the index (true) or not (false)
+        pattern: "true or false"
+
 output:
   - fa:
       - meta:
@@ -55,6 +61,16 @@ output:
           type: file
           description: FASTA index file
           pattern: "*.{fai}"
+  - sizes:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. [ id:'test', single_end:false ]
+      - "*.sizes":
+          type: file
+          description: File containing chromosome lengths
+          pattern: "*.{sizes}"
   - gzi:
       - meta:
           type: map
@@ -71,10 +87,17 @@ output:
           description: File containing software versions
           pattern: "versions.yml"
 authors:
+  - "@chris-cheshire"
   - "@drpatelh"
   - "@ewels"
+  - "@muffato"
   - "@phue"
+  - "@tamara-hodgetts"
 maintainers:
+  - "@chris-cheshire"
   - "@drpatelh"
   - "@ewels"
+  - "@maxulysse"
+  - "@muffato"
   - "@phue"
+  - "@tamara-hodgetts"
