--- a/.github/workflows/wave.yml
+++ b/.github/workflows/wave.yml
@@ -88,7 +88,7 @@ jobs:
     # if: github.repository == 'nf-core/modules'
     if: ${{ needs.generate-matrix.outputs.docker-matrix != '[]' }}
     needs: generate-matrix
-    name: Build Dockerfile-based ${{ matrix.profile }} Container
+    name: Build Dockerfile-based Container
     runs-on: ubuntu-latest
     timeout-minutes: 60
     strategy:
@@ -96,7 +96,6 @@ jobs:
       max-parallel: 4
       matrix:
         files: "${{ fromJson(needs.generate-matrix.outputs.docker-matrix) }}"
-        profile: [docker, singularity]
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
@@ -117,11 +116,8 @@ jobs:
       - name: Build ${{ matrix.profile }} container
         # NOTE If you're changing a Dockerfile and this is running, try to update the Dockerfile to build with wave
         continue-on-error: false
-        env:
-          PROFILE: ${{ (contains(matrix.profile, 'singularity') && '--singularity') || '' }}
         run: |
           wave -f "${{ matrix.files }}" \
-              $PROFILE \
               --freeze \
               --await \
               --build-repo quay.io/nf-core/modules/${{steps.registry-name.outputs.result}} \
