--- a/.github/workflows/nf-test.yml
+++ b/.github/workflows/nf-test.yml
@@ -63,7 +63,7 @@ jobs:
       SENTIEON_ENCRYPTION_KEY: ${{ secrets.SENTIEON_ENCRYPTION_KEY }}
     steps:
       - name: Clean Workspace # Purge the workspace in case it's running on a self-hosted runner
-        uses: AutoModality/action-clean@v1.1.0
+        uses: ./.github/actions/self-hosted-cleanup
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
         with:
           fetch-depth: 0
@@ -73,3 +73,5 @@ jobs:
           profile: ${{ matrix.profile }}
           shard: ${{ matrix.shard }}
           total_shards: ${{ env.TOTAL_SHARDS }}
+      - name: Clean Workspace # Purge the workspace in case it's running on a self-hosted runner
+        uses: ./.github/actions/self-hosted-cleanup
