--- a/modules/nf-core/propr/propd/environment.yml
+++ b/modules/nf-core/propr/propd/environment.yml
@@ -2,4 +2,5 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - conda-forge::r-propr=5.0.3
+  - conda-forge::r-propr=5.1.5
+  - bioconda::bioconductor-limma=3.58.1
