--- a/modules/nf-core/regtools/junctionsextract/meta.yml
+++ b/modules/nf-core/regtools/junctionsextract/meta.yml
@@ -1,7 +1,7 @@
----
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "regtools_junctionsextract"
-description: Extract exon-exon junctions from an RNAseq BAM file. The output is a BED file in the BED12 format.
+description: Extract exon-exon junctions from an RNAseq BAM file. The output is a
+  BED file in the BED12 format.
 keywords:
   - regtools
   - leafcutter
@@ -9,11 +9,13 @@ keywords:
   - splicing
 tools:
   - "regtools":
-      description: "RegTools is a set of tools that integrate DNA-seq and RNA-seq data to help interpret mutations in a regulatory and splicing context."
+      description: "RegTools is a set of tools that integrate DNA-seq and RNA-seq data
+        to help interpret mutations in a regulatory and splicing context."
       homepage: "https://regtools.readthedocs.io/en/latest/"
       documentation: "https://regtools.readthedocs.io/en/latest/#usage"
       tool_dev_url: "https://github.com/griffithlab/regtools"
       licence: ["MIT"]
+      identifier: biotools:regtools
 
 input:
   - - meta:
@@ -37,16 +39,16 @@ output:
           description: |
             Groovy Map containing sample information
             e.g. `[ id:'sample1', single_end:false ]`
-      - junc:
+      - "*.junc":
           type: file
-          description: BED12 file containing exon-exon junctions
+          description: |
+            BED12 file containing exon-exon "regtools_junctionsextract"
           pattern: "*.{junc}"
   - versions:
-      - versions:
+      - versions.yml:
           type: file
           description: File containing software versions
           pattern: "versions.yml"
-
 authors:
   - "@abartlett004"
 maintainers:
