ci: Add list-files json

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -69,6 +69,7 @@ jobs:
               - 'subworkflows/nf-core/**'
               - 'tests/subworkflows/nf-core/**'
           token: ""
+          list-files: "json"
 
       - name: Fetch module tags
         id: tags
