--- a/.github/workflows/nf-test.yml
+++ b/.github/workflows/nf-test.yml
@@ -63,7 +63,7 @@ jobs:
       SENTIEON_ENCRYPTION_KEY: ${{ secrets.SENTIEON_ENCRYPTION_KEY }}
     steps:
       - name: Clean Workspace # Purge the workspace in case it's running on a self-hosted runner
-        uses: ./.github/actions/self-hosted-cleanup
+        run: ./.github/scriptscleanup-selfhosted-runner.bash
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
         with:
           fetch-depth: 0
@@ -74,4 +74,4 @@ jobs:
           shard: ${{ matrix.shard }}
           total_shards: ${{ env.TOTAL_SHARDS }}
       - name: Clean Workspace # Purge the workspace in case it's running on a self-hosted runner
-        uses: ./.github/actions/self-hosted-cleanup
+        run: ./.github/scriptscleanup-selfhosted-runner.bash
