ci: Can't use a script if it doesn't exist yet
Co-authored-by: adamrtalbot <adamrtalbot@users.noreply.github.com>

--- a/.github/workflows/nf-test.yml
+++ b/.github/workflows/nf-test.yml
@@ -63,7 +63,11 @@ jobs:
       SENTIEON_ENCRYPTION_KEY: ${{ secrets.SENTIEON_ENCRYPTION_KEY }}
     steps:
       - name: Clean Workspace # Purge the workspace in case it's running on a self-hosted runner
-        run: ./.github/scriptscleanup-selfhosted-runner.bash
+        run: |
+          ls -la ./
+          rm -rf ./* || true
+          rm -rf ./.??* || true
+          ls -la ./
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
         with:
           fetch-depth: 0
@@ -73,5 +77,3 @@ jobs:
           profile: ${{ matrix.profile }}
           shard: ${{ matrix.shard }}
           total_shards: ${{ env.TOTAL_SHARDS }}
-      - name: Clean Workspace # Purge the workspace in case it's running on a self-hosted runner
-        run: ./.github/scriptscleanup-selfhosted-runner.bash
