--- a/.github/actions/nf-test-action/action.yml
+++ b/.github/actions/nf-test-action/action.yml
@@ -98,3 +98,11 @@ runs:
       shell: bash
       run: |
         sudo rm -rf /home/ubuntu/tests/
+
+    - name: Clean Workspace # Purge the workspace in case it's running on a self-hosted runner
+      if: always()
+      run: |
+        ls -la ./
+        rm -rf ./* || true
+        rm -rf ./.??* || true
+        ls -la ./
