--- a/.github/actions/nf-test-action/action.yml
+++ b/.github/actions/nf-test-action/action.yml
@@ -101,6 +101,7 @@ runs:
 
     - name: Clean Workspace # Purge the workspace in case it's running on a self-hosted runner
       if: always()
+      shell: bash
       run: |
         ls -la ./
         rm -rf ./* || true
