--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -52,9 +52,9 @@ jobs:
     outputs:
       # https://github.com/dorny/paths-filter?tab=readme-ov-file#custom-processing-of-changed-files
       modules: ${{ steps.filter.outputs.modules }}
-      modules_files: ${{ steps.filter.outputs.modules_files }}
-      subworkflows: ${{ steps.filter.outputs.subworkflows}}
-      subworkflows_files: ${{ steps.filter.outputs.subworkflows_files }}
+      modules_files: ${{ steps.module-names.outputs.results }}
+      subworkflows: ${{ steps.filter.outputs.subworkflows }}
+      subworkflows_files: ${{ steps.subworkflow-names.outputs.results }}
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
         with:
@@ -72,6 +72,20 @@ jobs:
               - 'tests/subworkflows/nf-core/**'
           token: ""
           list-files: "json"
+
+      - name: Get module name
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
+        id: modules-names
+        with:
+          script: |
+            return '${{ steps.filter.outputs.modules_files }}'.replace('modules/nf-core/', '').replace('/main.nf', '');
+
+      - name: Get module name
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
+        id: subworkflow-names
+        with:
+          script: |
+            return '${{ steps.filter.outputs.subworkflow_files }}'.replace('modules/nf-core/', '').replace('/main.nf', '');
 
       - name: debug
         run: |
@@ -117,14 +131,6 @@ jobs:
       - name: Install nf-core tools development version
         run: python -m pip install --upgrade --force-reinstall git+https://github.com/nf-core/tools.git@dev
 
-      - name: Get module name
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
-        id: name
-        with:
-          result-encoding: string
-          script: |
-            return '${{ matrix.files }}'.replace('modules/nf-core/', '').replace('/main.nf', '');
-
       - name: Lint module ${{steps.name.outputs.result}}
         run: nf-core modules lint ${{steps.name.outputs.result}}
 
@@ -158,14 +164,6 @@ jobs:
 
       - name: Install nf-core tools development version
         run: python -m pip install --upgrade --force-reinstall git+https://github.com/nf-core/tools.git@dev
-
-      - name: Get module name
-        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
-        id: name
-        with:
-          result-encoding: string
-          script: |
-            return '${{ matrix.files }}'.replace('modules/nf-core/', '').replace('/main.nf', '');
 
       - name: Lint subworkflow ${{steps.name.outputs.result}}
         run: nf-core subworkflows lint ${{steps.name.outputs.result}}
