--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -78,14 +78,14 @@ jobs:
         id: modules-names
         with:
           script: |
-            return '${{ steps.filter.outputs.modules_files }}'.replace('modules/nf-core/', '').replace('/main.nf', '');
+            return '${{ steps.filter.outputs.modules_files }}'.replace('modules/nf-core/', '').replace('/main.nf', '').replace('/environment.yml', '').replace('/meta.yml', '').replace('/README.md', '').replace('/tests/tags.yml', '').replace('/tests/main.nf.test', '').replace('/tests/main.nf.test.snap', '');
 
       - name: Get module name
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
         id: subworkflow-names
         with:
           script: |
-            return '${{ steps.filter.outputs.subworkflow_files }}'.replace('modules/nf-core/', '').replace('/main.nf', '');
+            return '${{ steps.filter.outputs.subworkflows_files }}'.replace('subworkflows/nf-core/', '').replace('/main.nf', '').replace('/environment.yml', '').replace('/meta.yml', '').replace('/README.md', '').replace('/tests/tags.yml', '').replace('/tests/main.nf.test', '').replace('/tests/main.nf.test.snap', '');
 
       - name: debug
         run: |
