--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -50,9 +50,11 @@ jobs:
     name: nf-core-changes
     runs-on: ubuntu-latest
     outputs:
-      tags: ${{ steps.filter.outputs.changes }}
-      modules: ${{ steps.tags.outputs.modules }}
-      subworkflows: ${{ steps.tags.outputs.subworkflows }}
+      # https://github.com/dorny/paths-filter?tab=readme-ov-file#custom-processing-of-changed-files
+      modules: ${{ steps.filter.outputs.modules }}
+      modules_files: ${{ steps.module_names.outputs.result }}
+      subworkflows: ${{ steps.filter.outputs.subworkflows }}
+      subworkflows_files: ${{ steps.subworkflow_names.outputs.result }}
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
         with:
@@ -61,29 +63,46 @@ jobs:
       - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3
         id: filter
         with:
-          filters: "tests/config/pytest_modules.yml"
+          filters: |
+            modules:
+              - 'modules/nf-core/**'
+              - 'tests/modules/nf-core/**'
+            subworkflows:
+              - 'subworkflows/nf-core/**'
+              - 'tests/subworkflows/nf-core/**'
           token: ""
+          list-files: "json"
 
-      - name: Fetch module tags
-        id: tags
-        run: |
-          echo modules=$(echo '${{ steps.filter.outputs.changes }}' | jq -c '. | map(select(contains("modules"))) | map(gsub("modules/"; ""))') >> $GITHUB_OUTPUT
-          echo subworkflows=$(echo '${{ steps.filter.outputs.changes }}' | jq '. | map(select(contains("subworkflow"))) | map(gsub("subworkflows/"; ""))') >> $GITHUB_OUTPUT
+      - name: Get module name
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
+        id: module_names
+        with:
+          script: |
+            return [...new Set(${{ steps.filter.outputs.modules_files }}.map(path => path.replace('modules/nf-core/', '').split('/').slice(0,2).filter(x => x !== 'main.nf').join('/')))];
+
+      - name: Get subworkflow name
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
+        id: subworkflow_names
+        with:
+          script: |
+            return [...new Set(${{ steps.filter.outputs.subworkflows_files }}.map(path => path.replace('subworkflows/nf-core/', '').split('/').slice(0,2).filter(x => x !== 'main.nf').join('/')))];
 
       - name: debug
         run: |
-          echo ${{ steps.tags.outputs.modules }}
-          echo ${{ steps.tags.outputs.subworkflows }}
+          echo ${{ steps.filter.outputs.modules_files }}
+          echo ${{ steps.filter.outputs.subworkflows_files }}
+          echo ${{ steps.module_names.outputs.result }}
+          echo ${{ steps.subworkflow_names.outputs.result }}
 
   nf-core-lint-modules:
     runs-on: ${{ github.event.inputs.runners  || 'self-hosted' }}
     name: nf-core lint modules
     needs: nf-core-changes
-    if: ${{ (needs.nf-core-changes.outputs.modules != '[]') }}
+    if: ${{ (needs.nf-core-changes.outputs.modules == 'true') }}
     strategy:
       fail-fast: false
       matrix:
-        tags: "${{ fromJson(needs.nf-core-changes.outputs.modules) }}"
+        module: "${{ fromJson(needs.nf-core-changes.outputs.modules_files) }}"
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
 
@@ -114,18 +133,18 @@ jobs:
       - name: Install nf-core tools development version
         run: python -m pip install --upgrade --force-reinstall git+https://github.com/nf-core/tools.git@dev
 
-      - name: Lint module ${{ matrix.tags }}
-        run: nf-core modules lint ${{ matrix.tags }}
+      - name: Lint module ${{ matrix.module }}
+        run: nf-core modules lint ${{ matrix.module }}
 
   nf-core-lint-subworkflows:
     runs-on: ubuntu-latest
     name: nf-core lint subworkflows
     needs: nf-core-changes
-    if: ${{ (needs.nf-core-changes.outputs.subworkflows != '[]') }}
+    if: ${{ (needs.nf-core-changes.outputs.subworkflows == 'true') }}
     strategy:
       fail-fast: false
       matrix:
-        tags: "${{ fromJson(needs.nf-core-changes.outputs.subworkflows) }}"
+        subworkflow: "${{ fromJson(needs.nf-core-changes.outputs.subworkflows_files) }}"
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
 
@@ -148,8 +167,8 @@ jobs:
       - name: Install nf-core tools development version
         run: python -m pip install --upgrade --force-reinstall git+https://github.com/nf-core/tools.git@dev
 
-      - name: Lint module ${{ matrix.tags }}
-        run: nf-core subworkflows lint ${{ matrix.tags }}
+      - name: Lint subworkflow ${{ matrix.subworkflow }}
+        run: nf-core subworkflows lint ${{ matrix.subworkflow }}
 
   confirm-pass:
     runs-on: ubuntu-latest
