Test bclconvert against NS6000 data set

--- a/modules/nf-core/bclconvert/tests/nextflow.config
+++ b/modules/nf-core/bclconvert/tests/nextflow.config
@@ -2,8 +2,8 @@ process {
     withName: 'BCLCONVERT' {
         ext.args = {[
             meta.lane ? "--bcl-only-lane ${meta.lane}" : "",
-            "--force",
-            "--first-tile-only true"
+            meta.tile ? "--tiles ${meta.tile}": "",
+            "--force"
             ].join(" ").trim()}
     }
 }
