--- a/modules/nf-core/trinity/meta.yml
+++ b/modules/nf-core/trinity/meta.yml
@@ -23,7 +23,7 @@ input:
       type: file
       description: |
         List of input fasta/fastq reads to be assembled into a transcriptome.
-      pattern: "*.{fa|fasta|fq|fastq}"
+      pattern: "*.{fa,fasta,fq,fastq}"
 output:
   - meta:
       type: map
