remove paths with `/tests/`

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -79,9 +79,9 @@ jobs:
         with:
           script: |
             return [...new Set(${{ steps.filter.outputs.modules_files }}
+              .filter(path => !path.includes('/tests/'))
               .map(path => path.replace('modules/nf-core/', '')
               .split('/')
-              .filter(x => !x.includes('tests'))
               .slice(0, 2)
               .filter(x => x !== 'main.nf')
               .join('/')))];
@@ -92,9 +92,9 @@ jobs:
         with:
           script: |
             return [...new Set(${{ steps.filter.outputs.subworkflows_files }}
+              .filter(path => !path.includes('/tests/'))
               .map(path => path.replace('subworkflows/nf-core/', '')
               .split('/')
-              .filter(x => !x.includes('tests'))
               .slice(0,2)
               .filter(x => x !== 'main.nf')
               .join('/')))];
