--- a/modules/nf-core/ska/fasta/meta.yml
+++ b/modules/nf-core/ska/fasta/meta.yml
@@ -31,7 +31,7 @@ input:
         ontologies:
           - edam: "http://edamontology.org/format_1929"
 
-    - fastalist:
+    - fasta_list:
         type: file
         description: List of FASTA files with contigs/reads
         pattern: "*.txt"
