--- a/modules/nf-core/bcftools/convert/tests/nextflow_gvcf.config
+++ b/modules/nf-core/bcftools/convert/tests/nextflow_gvcf.config
@@ -1,5 +1,5 @@
 process {
     withName: BCFTOOLS_CONVERT {
-        ext.args = '--gvcf2vcf --write-index=csi'
+        ext.args = '--no-version --gvcf2vcf --write-index=csi'
     }
 }
