--- a/modules/nf-core/bcftools/convert/tests/nextflow_hap.config
+++ b/modules/nf-core/bcftools/convert/tests/nextflow_hap.config
@@ -1,5 +1,5 @@
 process {
     withName: BCFTOOLS_CONVERT {
-        ext.args = '--haplegendsample test --write-index=tbi'
+        ext.args = '--no-version --haplegendsample test --write-index=tbi'
     }
 }
