--- a/modules/nf-core/bcftools/convert/tests/nextflow_bcf.config
+++ b/modules/nf-core/bcftools/convert/tests/nextflow_bcf.config
@@ -1,5 +1,5 @@
 process {
     withName: BCFTOOLS_CONVERT {
-        ext.args = '--gvcf2vcf --output-type b5 --write-index=tbi'
+        ext.args = '--no-version --gvcf2vcf --output-type b5 --write-index=tbi'
     }
 }
